--- a/app/frontend/src/components/Navbar.css
+++ b/app/frontend/src/components/Navbar.css
@@ -10,6 +10,12 @@ h1.navbar-item {
   }
 }
 
+@media screen and (max-width: 768px) {
+  h1.navbar-item {
+    font-size: 1.2em;
+  }
+}
+
 .navbar-item.logo {
   padding: 0;
   padding-left: 8px;
